--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<img src="Add a heading.png" class="firstBack">
+<div class="firstBack"></div>
 <style>
 .firstBack {
   width: 100vw;
   height: 100vh;
   position: relative;
   background-size: cover;
+  background-image: url("Add a heading.png");
 }
 body {
   padding: 0;
