--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <div class="firstBack"></div>
+<img src="IMG_1775.png" class="center">
 <style>
 .firstBack {
   width: 100vw;
@@ -10,5 +11,15 @@
 body {
   padding: 0;
   margin: 0;
+}
+center {
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2000;
+  position: absolute;
+  width: 70vw;
+  height: auto;
+  top: 50vh;
+  box-sizing: 0;
 }
 </style>
