--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@ body {
   padding: 0;
   margin: 0;
 }
+  #logo {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 10;
+    width: 100%;
+    height: 100%;
+    min-height: 100;
+    text-align: left;
+    alpha: (opacity=50);
+    display: block;
+    z-index: 20000;
+    opacity: 1;
+    pointer-events: auto;
+  }
 center {
   width: 70vw;
   height: auto;
@@ -19,3 +34,13 @@ center {
   z-index: 2000;
 }
 </style>
+
+<div id="logo">
+  <table width="100%" height="100%" cellpadding="0" cellspacing="0">
+    <tr>
+      <td align="center" valign="middle">
+        <img src="IMG_7775.png" class="center">
+      </td>
+    </tr>
+  </table>
+</div>
