--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   margin: 0;
 }
   #logo {
-    position: relative;
+    position: absolute;
     left: 0;
     top: 0;
     bottom: 10;
@@ -27,7 +27,7 @@ body {
     pointer-events: auto;
   }
 center {
-  width: 70vw;
+  width: 70%;
   height: auto;
   position: absolute;
   z-index: 2000;
