--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
     opacity: 1;
     pointer-events: auto;
   }
-center {
+.center {
   width: 70%;
   height: auto;
   position: absolute;
