--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ body {
     left: 0;
     top: 0;
     bottom: 10;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vw;
     min-height: 100;
     text-align: left;
     alpha: (opacity=50);
