--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<div id="logo">
-  <table width="100%" height="100%" cellpadding="0" cellspacing="0">
-    <tr>
-      <td align="center" valign="middle">
-        <img src="IMG_7775.png" class="center">
-      </td>
-    </tr>
-  </table>
-</div>
+<img src="IMG_7775.png" class="center">
 <div class="firstBack"></div>
 <style>
 .firstBack {
@@ -15,10 +7,11 @@
   position: relative;
   background-size: cover;
   background-image: url("Add a heading.png");
+  margin: 0;
 }
 body {
   padding: 0;
-  margin: 0;
+  
 }
   #logo {
     position: absolute;
@@ -38,6 +31,8 @@ body {
 .center {
   width: 70%;
   height: auto;
+  margin: auto;
+  display: block;
   position: absolute;
   z-index: 2000;
 }
