--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
   height: auto;
   margin: auto;
   display: block;
-  position: absolute;
+  position: relative;
   z-index: 2000;
 }
 </style>
