--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ body {
 .center {
   width: 70%;
   height: auto;
-  margin: auto;
-  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   position: absolute;
   z-index: 2000;
 }
