--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@ body {
 .center {
   width: 70%;
   height: auto;
-  top: 50%;
+  top: 60%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-40%, -50%);
   position: absolute;
   z-index: 2000;
 }
 </style>
 
-
+<script>
+  
+</script>
