--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
     setTimeout(slide, 5);
   }
   function slide() {
-    logo.style.opacity = logo.style.opacity + 0.01;
+    logo.style.opacity = (logo.style.opacity + 0.01).toString();
     logo.style.top = (parseInt(logo.style.top.toString().substring(0, 1)) + 0.1).toString().concat("%");
   }
 </script>
