--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@ body {
   }
   function slide() {
     logo.style.opacity = (logo.style.opacity + 0.01).toString();
-    logo.style.top = (parseInt(logo.style.top.toString().substring(0, 1)) + 0.1).toString().concat("%");
+    logo.style.top = (parseInt(logo.style.top.toString().substring(0, 1)) - 0.1).toString().concat("%");
   }
 </script>
