--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ body {
   opacity: 1;
 }
 </style>
-
+<p id=test>hi</p>
 <script>
   logo = document.getElementById("logo");
   for (i = 0; i < 100; i++) {
     setTimeout(slide, 5);
   }
   function slide() {
-    
+    document.getElementById("test").innerHTML = (parseInt(logo.style.top.toString().substring(0, 1)) - 0.1).toString().concat("%");
     logo.style.top = (parseInt(logo.style.top.toString().substring(0, 1)) - 0.1).toString().concat("%");
   }
 </script>
