--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
     setTimeout(slide, 5);
   }
   function slide() {
-    document.getElementById("test").innerHTML = (parseInt(logo.style.top.toString().substring(0, 1)) - 0.1).toString().concat("%");
+    document.getElementById("test").innerHTML = (parseInt(logo.style.top.substring(0, 2)) - 0.1).toString().concat("%");
     logo.style.top = (parseInt(logo.style.top.toString().substring(0, 2)) - 0.1).toString().concat("%");
   }
 </script>
