--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ body {
   }
   function slide() {
     topDist -= 0.1;
-    logo.style.top = "50%";
+    logo.style.top = topDist.toString().concat("%");
   }
 </script>
