--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="IMG_7775.png" id="logo">
+<img src="IMG_7775.png" class="center" id="logo">
 <div class="firstBack"></div>
 <style>
 .firstBack {
