--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body {
     pointer-events: auto;
   }
 .center {
+  -ms-transform: translate(-50%, -50%);
   width: 70%;
   height: auto;
   top: 50%;
