--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ body {
     pointer-events: auto;
   }
 .center {
-  -ms-transform: translate(-50%, -50%);
   width: 70%;
   height: auto;
+  margin: 0;
+  position: absolute;
   top: 50%;
   left: 50%;
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  position: absolute;
   z-index: 2000;
-  opacity: 1;
 }
 </style>
