--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
     pointer-events: auto;
   }
 .center {
-  width: 70%;
+  width: 70vw;
   height: auto;
   margin: 0;
   position: absolute;
