--- a/index.html
+++ b/index.html
@@ -27,3 +27,16 @@ body {
 }
   
 </style>
+<script>
+  startingO = 0;
+  startingT = 60;
+  for (i = 0; i < 100; i++) {
+    setTimeout(slide, 5);
+  }
+  function slide() {
+    startingO += 0.01;
+    startingT -= 0.1;
+    document.getElementById("logo").style.top = startingT.toString().concat("%");
+    document.getElementById("logo").style.opacity = startingO.toString();
+  }
+</script>
