--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   z-index: 2000;
+  opacity: 0;
 }
   
 </style>
