--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
   startingO = 0;
   startingT = 60;
   for (i = 0; i < 100; i++) {
-    setTimeout(slide, 10);
+    setTimeout(slide, i * 5);
   }
   function slide() {
     startingO += 0.01;
