--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ body {
   startingO = 0;
   startingT = 60;
   for (i = 0; i < 100; i++) {
+    if (i < 50) {
     setTimeout(slide, i * 5);
+    } else {
+    setTimeout(slide, i * 5 * (i/25));
+    }
   }
   function slide() {
     startingO += 0.01;
