--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
     if (i < 50) {
     setTimeout(slide, i * 5);
     } else {
-    setTimeout(slide, i * 5 * ((i/50) * (i/50)));
+    setTimeout(slide, (i * 5 * ((i/50) * (i/50))) * 1.5);
     }
   }
   function slide() {
