--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <img src="IMG_7775.png" class="center" id="logo">
 <img src="IMG_7794.png" class="floater" id="floater">
 <style>
-
+.floater {
+  width: 100vw;
+  top: 100vh;
+  height: auto;
+}
 .firstBack {
   width: 100vw;
   height: 110vh;
