--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ window.addEventListener("scroll", function() {
     logoEl.style.width =  70 - ((1 / topDistance) * 40) + "%";
   } else {
     logoEl.style.position = "absolute";
-    logoEl.style.top = 75 + "vh";
+    logoEl.style.top = 50 + "%";
   }
 });
 </script>
