--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ window.addEventListener("scroll", function() {
   if (topDistance < 0) {
     logoEl.style.position = "fixed";
     logoEl.style.top = 0;
+    logoEl.style.width = 30 + "%";
   } else if (topDistance < 21) {
     logoEl.style.width =  70 - ((1 / topDistance) * 40) + "%";
   } else {
