--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ window.addEventListener("scroll", function() {
   } else {
     logoEl.style.position = "absolute";
     logoEl.style.top = 50 + "%";
+    logoEl.style.width = 70 + "%";
   }
 });
 </script>
