--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ window.addEventListener("scroll", function() {
   
   logoEl = document.getElementById("logo");
   topDistance = window.pageYOffset;
-  if (topDistance > window.innerHeight) {
+  if (topDistance > window.innerHeight * 0.7) {
     logoEl.style.position = "fixed";
     logoEl.style.top = 15.13 + "%";
     logoEl.style.width = 30 + "%";
-  } else if (topDistance > window.innerHeight * 1.1) {
-    logoEl.style.width =  70 - ((1 / (topDistance - window.innerHeight)) * 40) + "%";
+  } else if (topDistance > window.innerHeight * 0.8) {
+    logoEl.style.width =  70 - ((1 / (topDistance - window.innerHeight * 0.7)) * 40) + "%";
   } else {
     logoEl.style.position = "absolute";
     logoEl.style.top = 50 + "%";
