--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@ window.addEventListener("scroll", function() {
   logoEl = document.getElementById("logo");
   topDistance = window.pageYOffset;
   if (topDistance > window.innerHeight * 0.5) {
+    logoEl.style.width =  70 - ((1 / (topDistance - window.innerHeight * 0.5)) * 40) + "%"
+  } else if (topDistance > window.innerHeight * 0.6) {
     logoEl.style.position = "fixed";
     logoEl.style.top = 15.13 + "%";
     logoEl.style.width = 30 + "%";
-  } else if (topDistance > window.innerHeight * 0.6) {
-    logoEl.style.width =  70 - ((1 / (topDistance - window.innerHeight * 0.5)) * 40) + "%";
   } else {
     logoEl.style.position = "absolute";
     logoEl.style.top = 50 + "%";
