--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ window.addEventListener("scroll", function() {
   
   logoEl = document.getElementById("logo");
   topDistance = window.pageYOffset;
-  if (topDistance > window.innerHeight * 0.5) {
-    logoEl.style.width =  70 - ((1 / (topDistance - window.innerHeight * 0.5)) * 40) + "%"
-  } else if (topDistance > window.innerHeight * 0.6) {
+  if (topDistance > window.innerHeight * 0.4) {
+    logoEl.style.width =  70 - (((topDistance - window.innerHeight * 0.4) / window.innerHeight * 0.1) * 40) + "%"
+  } else if (topDistance > window.innerHeight * 0.5) {
     logoEl.style.position = "fixed";
-    logoEl.style.top = 15.13 + "%";
+    logoEl.style.top = 15.13 + "vw";
     logoEl.style.width = 30 + "%";
   } else {
     logoEl.style.position = "absolute";
