--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div class="firstBack"></div>
-<div id="div" class="center"><img src="IMG_7775.png" class="centerChild" id="logo"></div>
+<div id="div" class="centerChild"><img src="IMG_7775.png" class="center" id="logo"></div>
 <img src="IMG_7794.png" class="floater" id="floater">
 <style>
 .floater {
@@ -27,7 +27,7 @@ body {
   top: 50%;
   width: 70vw;
   height: auto;
-  position: sticky;
+  position: abaolute;
   z-index: 200;
   opacity: 0;
 }
@@ -35,7 +35,7 @@ body {
   width: 70vw;
   height: auto;
   margin: 0;
-  position: absolute;
+  position: sticky;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
