--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
   top: 50%;
   width: 70vw;
   height: auto;
-  position: abaolute;
+  position: absolute;
   z-index: 200;
   opacity: 1;
 }
