--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div class="firstBack"></div>
-<div id="div" class="centerChild"><img src="IMG_7775.png" class="center" id="logo"></div>
+<div id="div" class="center"><img src="IMG_7775.png" class="centerChild" id="logo"></div>
 <img src="IMG_7794.png" class="floater" id="floater">
 <style>
 .floater {
@@ -23,7 +23,7 @@ body {
   padding: 0;
   margin: 0;
 }
-.centerChild {
+.center {
   left: 50%;
   top: 50%;
   width: 70vw;
@@ -31,19 +31,20 @@ body {
   position: absolute;
   z-index: 200;
   opacity: 1;
+    .centerChild {
+    width: 70vw;
+    height: auto;
+    margin: 0;
+    position: sticky;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 2000;
+    opacity: 0;
+  }
 }
-  .center {
-  width: 70vw;
-  height: auto;
-  margin: 0;
-  position: sticky;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 2000;
-  opacity: 0;
-}
+
   
 </style>
   <p id="test">hi</p>
