--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@ body {
   margin: 0;
 }
 .center {
-  left: 50%;
-  top: 50%;
-  width: 70vw;
-  height: auto;
-  position: absolute;
+  width: 100%;
+  height: 100%;
+  position: sticky;
   z-index: 200;
   opacity: 1;
     .centerChild {
     width: 70vw;
     height: auto;
     margin: 0;
-    position: sticky;
+    position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
