--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@ body {
   margin: 0;
 }
 .center {
-  width: 100%;
-  height: 100%;
-  position: sticky;
+  width: 70vw;
+  height: auto;
+  position: absolute;
   z-index: 200;
   opacity: 1;
     .centerChild {
     width: 70vw;
     height: auto;
     margin: 0;
-    position: absolute;
+    position: sticky;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
