--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@ body {
   position: absolute;
   z-index: 200;
   opacity: 1;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
     .centerChild {
+    top: 0;
+    left: 0;
     width: 70vw;
     height: auto;
     margin: 0;
     position: sticky;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
     z-index: 2000;
     opacity: 0;
   }
