--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ body {
 }
 .center {
   width: 70vw;
-  height: auto;
   position: absolute;
   z-index: 200;
   opacity: 1;
@@ -33,6 +32,7 @@ body {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  height: 100%;
     .centerChild {
     top: 0;
     left: 0;
