--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
   function slide() {
     startingO += 0.01;
     startingT -= 0.1;
-    document.getElementById("div").style.top = startingT.toString().concat("%");
+    document.getElementById("logo").style.top = startingT.toString().concat("%");
     document.getElementById("logo").style.opacity = startingO.toString();
   }
   ratio = window.innerWidth / window.innerHeight;
