--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  height: 100%;
+  height: auto;
   margin: 0;
   }
 }
