--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ body {
   menu = document.getElementById("menuToggler");
   function toggle() {
     if (phase == 0) {
-      for (i = 0; i < 5; i++) {
-        setTimeout(nextFrame(i, true), i * 50);
+      for (i = 0; i < 6; i++) {
+        setTimeout(nextFrame(i + 1, true), (i + 1) * 50);
       }
     } else if (phase == 5) {
       for (i = 0; i < 6; i++) {
-        setTimeout(nextFrame(5 - i, false), i * 50);
+        setTimeout(nextFrame(5 - i, false), (i + 1) * 50);
       }
     } else {}
   }
