--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@ body {
   function toggle() {
     if (phase == 0) {
       for (i = 0; i < 6; i++) {
-        setTimeout(nextFrame(i + 1, true), ((i + 1) * 50));
+        setTimeout(function() {
+          nextFrame((i + 1), true)
+        }, ((i + 1) * 50));
       }
     } else if (phase == 6) {
       for (i = 0; i < 6; i++) {
-        setTimeout(nextFrame((6 - i), false), ((i + 1) * 50));
+        setTimeout(function() {
+          nextFrame((6 - i), false)
+        }, ((i + 1) * 50));
       }
     } else {}
   }
