--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ body {
   function toggle() {
     if (phase == 0) {
       for (i = 0; i < 6; i++) {
-        setTimeout(nextFrame((i + 1), true), ((i + 1) * 50));
+        setTimeout(nextFrame, ((i + 1) * 50), i + 1, true);
       }
     } else if (phase == 6) {
       for (i = 0; i < 6; i++) {
-        setTimeout(nextFrame((6 - i), false), ((i + 1) * 50));
+        setTimeout(nextFrame, ((i + 1) * 50), 6 - 1, false);
       }
     } else {}
   }
