--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
       }
     } else if (phase == 6) {
       for (i = 0; i < 6; i++) {
-        setTimeout(nextFrame, ((i + 1) * 50), 6 - 1, false);
+        setTimeout(nextFrame, ((i + 1) * 50), 6 - i, false);
       }
     } else {}
   }
