--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     margin: 0;
     background-image: url("IMG_7820.png");
     overflow-x: hidden;
-    transition: left 0.3s;
+    transition: 0.3s;
   }
   .menuToggle {
     position: fixed;
