--- a/index.html
+++ b/index.html
@@ -63,18 +63,19 @@ body {
 <script>
   phase = 0;
   menu = document.getElementById("menuToggler");
+  menuAt = document.getElementById("menu");
   function toggle() {
     if (phase == 0) {
       for (i = 0; i < 6; i++) {
         setTimeout(nextFrame, ((i + 1) * 50), i + 1, true);
       }
-      
+      menuAt.style.left = 75 + "%";
       }
     } else if (phase == 6) {
       for (i = 0; i < 6; i++) {
         setTimeout(nextFrame, ((i + 1) * 50), 6 - i, false);
       }
-      
+      menuAt.style.left = 100 + "%";
     } else {}
   }
   function nextFrame(frame, up) {
