--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     position: fixed;
     height: 100%;
     width: 25%;
-    left: 100vw;
+    left: 50vw;
     top: 0;
     margin: 0;
     background-image: url("IMG_7820.png");
     overflow-x: hidden;
+    transition: 0.3s;
   }
   .menuToggle {
     position: fixed;
