--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <div class="firstBack"></div>
 <img src="IMG_7775.png" class="center" id="logo">
 <img src="IMG_7794.png" class="floater" id="floater">
-<div class="menu" id="menu"><img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()"></div>
+<img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
+<div class="menu" id="menu"></div>
 <style>
   .menu {
     position: fixed;
