--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     position: fixed;
     height: 100%;
     width: 25%;
-    left: 50vw;
+    left: 100%;
     top: 0;
     margin: 0;
     background-image: url("IMG_7820.png");
