--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <img src="IMG_7775.png" class="center" id="logo">
 <img src="IMG_7794.png" class="floater" id="floater">
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
-<div class="menu" id="menu"></div>
+<img class="menu" src="IMG_7820.png" id="menu">
 <style>
   .menu {
     position: fixed;
@@ -14,7 +14,6 @@
     left: 100%;
     top: 0;
     margin: 0;
-    background-image: url("IMG_7820.png");
     overflow-x: hidden;
     transition: 0.3s;
   }
