--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     margin: 0;
     overflow-x: hidden;
     transition: 0.3s;
+    z-index: 200;
   }
   .menuToggle {
     position: fixed;
@@ -24,6 +25,8 @@
     top: 0;
     margin: 0;
     left: 90vw;
+    transition: 0.3s;
+    z-index: 200;
   }
 .floater {
   width: 100vw;
@@ -46,7 +49,7 @@ body {
 .center {
   width: 70vw;
   position: absolute;
-  z-index: 200;
+  z-index: 100;
   opacity: 0;
   top: 50%;
   left: 50%;
@@ -70,11 +73,13 @@ body {
         setTimeout(nextFrame, ((i + 1) * 50), i + 1, true);
       }
       menuAt.style.left = 75 + "%";
+      menu.style.left = 65 + "%";
     } else if (phase == 6) {
       for (i = 0; i < 6; i++) {
         setTimeout(nextFrame, ((i + 1) * 50), 6 - i, false);
       }
       menuAt.style.left = 100 + "%";
+      menu.style.left = 90 + "%";
     } else {}
   }
   function nextFrame(frame, up) {
