--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
 <div class="menu" id="menu"></div>
 <style>
+  .darken {
+    pointer-events: none;
+    z-index: -200;
+  }
   .menu {
     position: fixed;
     height: 100%;
