--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     z-index: -200;
     opacity: 0;
     transition: opacity 0.3s;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    top:0;
+    left:0;
   }
   .menu {
     position: fixed;
