--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ body {
   transform: translate(-50%, -50%);
   height: auto;
   margin: 0;
+  transition: 1s;
   }
 }
 
@@ -112,21 +113,9 @@ body {
       phase -= 1;
     }
   }
-  startingO = 0;
-  startingT = 60;
-  for (i = 0; i < 100; i++) {
-    if (i < 50) {
-    setTimeout(slide, i * 5);
-    } else {
-    setTimeout(slide, i * 5 * i/50);
-    }
-  }
-  function slide() {
-    startingO += 0.01;
-    startingT -= 0.1;
-    document.getElementById("logo").style.top = startingT.toString().concat("%");
-    document.getElementById("logo").style.opacity = startingO.toString();
-  }
+  document.getElementById("logo").style.opacity = 1;
+  document.getElementById("logo").style.top = 50 + "%";
+  
   ratio = window.innerWidth / window.innerHeight;
   document.getElementById("test").innerHTML = ratio;
   function parallax() {
