--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@ body {
   transform: translate(-50%, -50%);
   height: auto;
   margin: 0;
-  transition: 1s;
+  transition: opacity 1s top 1s;
   }
 }
 
   
 </style>
-  <p id="test">hi</p>
 <script>
   phase = 0;
   menu = document.getElementById("menuToggler");
