--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@ body {
   
 </style>
 <script>
+  setTimeout(function() {
   document.getElementById("logo").style.opacity = 1;
   document.getElementById("logo").style.top = 50 + "%";
+  }, 5);
   phase = 0;
   menu = document.getElementById("menuToggler");
   menuAt = document.getElementById("menu");
