--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<body onload="fadeIn()"></body>
 <div class="firstBack"></div>
 <img src="IMG_7775.png" class="center" id="logo">
 <img src="IMG_7794.png" class="floater" id="floater">
@@ -63,7 +64,7 @@ body {
   margin: 0;
 }
 .center {
-  transition: opacity 1s top 1s;
+  transition: 1s;
   width: 70vw;
   position: absolute;
   z-index: 100;
@@ -79,10 +80,12 @@ body {
   
 </style>
 <script>
-  setTimeout(function() {
+  function fadeIn() {
+  document.getElementById("logo").style.opacity = 0;
+  document.getElementById("logo").style.top = 60 + "%";
   document.getElementById("logo").style.opacity = 1;
   document.getElementById("logo").style.top = 50 + "%";
-  }, 10);
+  }
   phase = 0;
   menu = document.getElementById("menuToggler");
   menuAt = document.getElementById("menu");
