--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {
       }
       menuAt.style.left = 75 + "%";
       menu.style.left = 65 + "%";
-      $('body').addClass('stop-scrolling');
+      $('body').classList.add('stop-scrolling');
       document.getElementById("darken").style.opacity = 1;
       document.getElementById("darken").style.zIndex = "195";
     } else if (phase == 6) {
@@ -109,7 +109,7 @@ body {
       }
       menuAt.style.left = 100 + "%";
       menu.style.left = 90 + "%";
-      $('body').removeClass('stop-scrolling');
+      $('body').classList.remove('stop-scrolling');
       document.getElementById("darken").style.opacity = 0;
       setTimeout(function() {
       document.getElementById("darken").style.zIndex = "-200";
