--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   height: 110vh;
   position: relative;
   background-size: cover;
-  background-image: url("Add a heading.png");
+  background-image: url("IMG_7824.png");
   
 }
 body {
