--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 <img src="IMG_7794.png" class="floater" id="floater">
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
 <div class="menu" id="menu"></div>
-  
+
 <img src="IMG_7822.png" class="darken" id="darken">
+<div class="info" id="info">
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/9keeDyFxzY4" title="2024 FIRST Robotics Competition CRESCENDO presented by Haas Game Animation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 <style>
+  .info {
+    width: 100vw;
+    height: 365vw;
+    background-image: url("IMG_7829.png");
+    top: 85vh;
+    left: 0;
+    margin: 0;
+  }
   .darken {
     pointer-events: none;
     z-index: -200;
@@ -86,6 +96,8 @@ body {
   
 </style>
 <script>
+  ratio = window.innerHeight / window.innerWidth;
+  document.getElementById("info").style.top = 100 * ratio + 20 + "vw";
   bodyEl = document.getElementById("body");
   function fadeIn() {
   document.getElementById("logo").style.opacity = 0;
