--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     top: 85vh;
     left: 0;
     margin: 0;
+    z-index: 150;
+    background-size: cover;
   }
   .darken {
     pointer-events: none;
