--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ body {
 </style>
 <script>
   ratio = window.innerHeight / window.innerWidth;
+  document.getElementById("info").style.top = 0;
   document.getElementById("info").style.top = 100 * ratio + 10 + "vw";
   bodyEl = document.getElementById("body");
   function fadeIn() {
