--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {
 <script>
   ratio = window.innerHeight / window.innerWidth;
   document.getElementById("info").style.top = 0;
-  document.getElementById("info").style.top = 100 * ratio + 10 + "vw";
+  document.getElementById("info").style.top = 100 + "vh";
   bodyEl = document.getElementById("body");
   function fadeIn() {
   document.getElementById("logo").style.opacity = 0;
